Fixed annoying header z-index bug

--- a/static/src/styles/public/topbar.sass
+++ b/static/src/styles/public/topbar.sass
@@ -1,3 +1,6 @@
+.fixed
+  z-index: 9999
+
 #logo-title
   background: url(../../images/header-logo-small.png) no-repeat 20px center
   text-indent: -9999px
